Rework link button to prevent wrapping
Fixes #72

--- a/src/components/ItemTypeTile/ItemTypeTile.scss
+++ b/src/components/ItemTypeTile/ItemTypeTile.scss
@@ -1,4 +1,9 @@
+@import 'styles/variables.scss';
+
 .ItemTypeTile {
+    color: $gray-900;
+    text-decoration: none;
+
     .Button {
         padding: 1rem;
     }
